objects/LoadingGroupCategoryMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SFDC-3388: Loading Group Category Mapping with Contract Record Type,</description>
    <fields>
        <fullName>ContractRecordType__c</fullName>
        <label>Contract Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoadingGroupCategory__c</fullName>
        <label>Loading Group Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Loading Group Category Mapping</label>
</CustomObject>